fixed z-index

--- a/client/js/components/Keyboard/styles.scss
+++ b/client/js/components/Keyboard/styles.scss
@@ -125,7 +125,7 @@ ul.piano li span {
   background:-ms-linear-gradient(-20deg,#333,#000,#333);
   background:-o-linear-gradient(-20deg,#333,#000,#333);
   background:linear-gradient(-20deg,#333,#000,#333);
-  z-index:10;
+  z-index:2;
   border-width:1px 2px 7px;
   border-style:solid;
   border-color:#666 #222 #111 #555;
